<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@android:color/black" android:layout_height="fill_parent"
	android:layout_width="fill_parent" android:orientation="vertical">
	<LinearLayout android:id="@+id/topLayout" android:gravity="center_horizontal"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:orientation="vertical" android:layout_marginTop="50px">
		<TextView android:text="@string/about_title"
			android:textColor="#999900" android:gravity="center_horizontal"
			android:layout_width="fill_parent" android:id="@+id/about_top"
			android:layout_height="wrap_content" android:textSize="36px"></TextView>
		<TextView android:text="@string/about_version"
			android:textColor="#999900" android:gravity="center_horizontal"
			android:layout_width="fill_parent" android:id="@+id/about_top"
			android:layout_height="wrap_content" android:textSize="20px"></TextView>
	</LinearLayout>
	<LinearLayout android:padding="10px"
		android:layout_marginTop="30px" android:id="@+id/midLayout"
		android:gravity="fill_horizontal" android:layout_height="wrap_content"
		android:layout_width="wrap_content">
		<TextView android:text="@string/about_msg" android:textColor="#999900"
			android:gravity="center_horizontal" android:layout_width="fill_parent"
			android:id="@+id/about_msg" android:layout_height="wrap_content"
			android:textSize="20px" android:visibility="visible"></TextView>
	</LinearLayout>
	<LinearLayout android:padding="10px"
		android:layout_marginTop="30px" android:orientation="vertical"
		android:id="@+id/about_bottomlayout" android:gravity="center_horizontal"
		android:layout_height="wrap_content" android:layout_width="fill_parent">
		<TextView android:text="@string/about_twitter"
			android:textColor="#999900" android:gravity="center_horizontal"
			android:layout_width="fill_parent" android:id="@+id/about_top"
			android:layout_height="fill_parent" android:textSize="20px"></TextView>
		<TextView android:text="@string/about_facebook"
			android:textColor="#999900" android:gravity="center_horizontal"
			android:layout_width="fill_parent" android:id="@+id/about_top"
			android:layout_height="fill_parent" android:textSize="20px"></TextView>
	</LinearLayout>
</LinearLayout>
